<resources>
    <string name="app_name">Capstone Project</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_user_name">USERNAME</string>
    <string name="string_email">EMAIL</string>
    <string name="string_phone">PHONE</string>
    <string name="string_birthday">BIRTHDAY</string>
    <string name="string_password">PASSWORD</string>
    <string name="string_create_account">Create Account</string>
    <string name="string_login">Login</string>
    <string name="login">LOGIN</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="send">Send</string>
    <string name="e_mail">E-mail</string>
    <string name="explanation_for_forgot_password">Please, enter your email address. You will receive a \n link to create a new password via email.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="wrong_email_password">Wrong E-mail or Password, Try Again !</string>
    <string name="wrong_email">Wrong E-mail, Try Again !</string>
    <string name="incomplete_information_entered">Incomplete information entered!</string>
    <string name="invalid_mail">Invalid e-mail address</string>
    <string name="password_match_error">Passwords do not match</string>
    <string name="sign_up_snack_text">Registration successfully created</string>
    <string name="registered_mail">E-mail address already registered!</string>
    <string name="fav_image_description">fav_image_description</string>
    <string name="this_product_added_fav">This product added in favList</string>
    <string name="this_product_added_bag">This product added in Bag</string>
    <string name="this_basket__empty">Bag is empty</string>

</resources>